created HTML timeblocks

--- a/index.html
+++ b/index.html
@@ -20,19 +20,87 @@
     />
     <link rel="stylesheet" href="assets/style.css" />
     <title>Work Day Scheduler</title>
-  </head>
+</head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+<!-- Timeblocks go here -->
+    <div class="row time-block " id="7AM" >
+      <section id="hour7" class="col-1 border border-dark border-left-0 ">7 AM</section>
+      <textarea id="7"class="col-10 border border-dark  text-input7 description"  ></textarea>
+      <button class="saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span> </button>
     </div>
+    <div class="row time-block " id="8AM" >
+      <section id="hour8"class= "col-1 border border-dark border-left-0 ">8 AM</section>
+      <textarea  id="H8"class="col-10 border border-dark  text-input8 description"  ></textarea>
+      <button class="saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
+    </div>                
+    <div class="row time-block " id="9AM">
+      <section id="hour9" class ="col-1 border border-dark border-left-0 ">9 AM</section>
+      <textarea  id="9"class="col-10 border border-dark text-input9 description"></textarea>
+      <button class="saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
+    </div>        
+    <div class="row time-block " id="10AM">
+      <section id="hour10" class ="col-1 border border-dark border-left-0 ">10 AM</section>
+      <textarea  id="10"class="col-10 border border-dark text-input10 description" ></textarea>
+      <button class="btn saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
+    </div>         
+    <div class="row time-block  " id="11AM">
+      <section id="hour11" class="col-1 border border-dark border-left-0 ">11 AM</section>
+      <textarea  id="11"class="col-10 border border-dark text-input11 description" ></textarea>        
+      <button class="saveBtn col-1 border border-dark rounded-right"id="11am"><span>SAVE</span></button>
+    </div>
+    <div class="row time-block " id="12PM">
+      <section id="hour12" class="col-1 border border-dark border-left-0 ">12 PM</section>
+      <textarea  id="13"class="col-10 border border-dark text-input12 description" ></textarea>
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+    </div>
+    <div class="row time-block " id="1PM" >
+      <section id="hour13"class="col-1 border border-dark border-left-0 ">1 PM</section>
+      <textarea class="col-10 border border-dark text-input13 description" ></textarea>
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+    </div>
+    <div class="row time-block " id="2PM" >
+      <section id="hour14"class="col-1 border border-dark border-left-0 ">2 PM</section>
+      <textarea id="14"class="col-10 border border-dark text-input14 description"></textarea>        
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>      
+    </div>
+    <div class="row time-block " id="3PM">
+      <section id="hour15"class="col-1 border border-dark border-left-0 " >3 PM</section>
+      <textarea id="H15" class="col-10 border border-dark text-input15 description"></textarea>
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+    </div>
+    <div class = "row time-block " id="4PM">
+      <section id="hour16"class="col-1 border border-dark border-left-0 ">4 PM</section>
+      <textarea  id="16"class="col-10 border border-dark text-input16 description" ></textarea>        
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+    </div>
+    <div class = "row time-block " id="5PM">
+      <section id="hour17"class="col-1 border border-dark border-left-0 ">5 PM</section>
+      <textarea id="17"class="col-10 border border-dark text-input17 description" ></textarea>        
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+    </div>     
+    <div class = "row time-block " id="6PM">
+      <section id="hour18"class="col-1 border border-dark border-left-0 ">6 PM</section>
+      <textarea id="18" class="col-10 border border-dark text-input18 description" ></textarea>        
+      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+    </div>      
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
+  <footer> 💙 Made by tooqk4u💙</footer>  
+
+
+
+
+    
 </html>
