added localstorage to javascript

--- a/index.html
+++ b/index.html
@@ -32,48 +32,48 @@
 <!-- Timeblocks go here -->
     <div class="row time-block " id="9AM">
       <section id="hour9" class ="col-1 border border-dark border-left-0 ">9 AM</section>
-      <textarea  id="9"class="col-10 border border-dark text-input9 description"></textarea>
-      <button class="saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
+      <textarea  class="col-10 border border-dark text-input9 description"></textarea>
+      <button data-id="text-input9" class="saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
     </div>        
     <div class="row time-block " id="10AM">
       <section id="hour10" class ="col-1 border border-dark border-left-0 ">10 AM</section>
       <textarea  class="col-10 border border-dark text-input10 description" ></textarea>
-      <button class="btn saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
+      <button data-id="text-input10" class="btn saveBtn col-1 border border-dark rounded-right" ><span>SAVE</span></button>
     </div>         
     <div class="row time-block  " id="11AM">
       <section id="hour11" class="col-1 border border-dark border-left-0 ">11 AM</section>
       <textarea  class="col-10 border border-dark text-input11 description" ></textarea>        
-      <button class="saveBtn col-1 border border-dark rounded-right"id="11am"><span>SAVE</span></button>
+      <button data-id="text-input11" class="saveBtn col-1 border border-dark rounded-right"id="11am"><span>SAVE</span></button>
     </div>
     <div class="row time-block " id="12PM">
       <section id="hour12" class="col-1 border border-dark border-left-0 ">12 PM</section>
       <textarea class="col-10 border border-dark text-input12 description" ></textarea>
-      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+      <button data-id="text-input12" class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
     </div>
     <div class="row time-block " id="1PM" >
       <section id="hour13"class="col-1 border border-dark border-left-0 ">1 PM</section>
       <textarea class="col-10 border border-dark text-input13 description" ></textarea>
-      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+      <button data-id="text-input13" class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
     </div>
     <div class="row time-block " id="2PM" >
       <section id="hour14"class="col-1 border border-dark border-left-0 ">2 PM</section>
       <textarea class="col-10 border border-dark text-input14 description"></textarea>        
-      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>      
+      <button data-id="text-input14" class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>      
     </div>
     <div class="row time-block " id="3PM">
       <section id="hour15"class="col-1 border border-dark border-left-0 " >3 PM</section>
-      <textarea  class="col-10 border border-dark text-input15 description"></textarea>
-      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+      <textarea class="col-10 border border-dark text-input15 description"></textarea>
+      <button data-id="text-input15" class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
     </div>
     <div class = "row time-block " id="4PM">
       <section id="hour16"class="col-1 border border-dark border-left-0 ">4 PM</section>
       <textarea  class="col-10 border border-dark text-input16 description" ></textarea>        
-      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+      <button data-id="text-input16" class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
     </div>
     <div class = "row time-block " id="5PM">
       <section id="hour17"class="col-1 border border-dark border-left-0 ">5 PM</section>
       <textarea class="col-10 border border-dark text-input17 description" ></textarea>        
-      <button class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
+      <button data-id="text-input17" class="saveBtn col-1 border border-dark rounded-right"><span>SAVE</span></button>
     </div>     
    </div>
 
